add en / some other adjustments

--- a/docs/en-gb/modules/automation/pages/event-procedures.adoc
+++ b/docs/en-gb/modules/automation/pages/event-procedures.adoc
@@ -260,8 +260,12 @@ Some filters have additional settings. Therefore, select the required settings a
 icon:map-signs[] *Or:* Alternatively, you can select one or more warehouses to filter the orders according to the warehouse(s) assigned to them.
 
 | *Number of positions*
-|Orders are filtered according to the number of variations included per order. Select whether the system filters orders according to a fixed number ( ==) of variations or according to values greater than (>), greater than or equal to (>=), less than (<) or less than or equal to (< ==) the selected quantity. You can also limit results by using a second (optional) operator.
-_Example_: The required setting for filtering all orders with more than 5, but less than or equal to 10 variations >5 <= 10.10.
+|Orders are filtered according to the number of different variations included per order. Select whether the system filters orders according to a fixed number ( ==) of variations or according to values greater than (>), greater than or equal to (>=), less than (<) or less than or equal to (< ==) the selected quantity. You can also limit results by using a second (optional) operator. +
+*_Example_:* Required setting for filtering all orders with more than 5, but less than or equal to 10 different variations >5 < = 10.
+
+| *Quantity of order items*
+|Orders are filtered according to the total quantity of order items included per order. Select whether the system filters orders according to a fixed number ( ==) of order items or according to values greater than (>), greater than or equal to (>=), less than (<) or less than or equal to (< ==) the selected quantity. You can also limit results by using a second (optional) operator. +
+*_Example_:* Required setting for filtering all orders with more than 5, but less than or equal to 10 order items: >5 < = 10.
 
 | *Active user*
 |Orders are filtered according to the active xref:business-decisions:user-accounts-access.adoc#[user], which means the person by whom the event procedure is triggered. You can also select several or *all* users at once.
