FIX further issues noticed

--- a/docs/de-de/modules/videos/pages/fulfillment-mit-prozessen.adoc
+++ b/docs/de-de/modules/videos/pages/fulfillment-mit-prozessen.adoc
@@ -6,16 +6,17 @@
 //tag::einleitung[]
 [cols="2, 1" grid=none]
 |===
-|Du möchtest mit wenigen Klicks deine Aufträge abarbeiten und schließlich zu Kund:innen schicken: Kein Problem mit Prozessen! Wie es genau funktioniert erfährst du in diesem Video. Lade dir hier und jetzt den Prozess herunter!
+|Du möchtest mit wenigen Klicks deine Aufträge abarbeiten und schließlich zu Kund:innen schicken: Kein Problem mit Prozessen! Wie es genau funktioniert erfährst du in diesem Video.
+
+Lade dir hier und jetzt den Prozess herunter: +
+link:https://cdn02.plentymarkets.com/pmsbpnokwu6a/frontend/plentyprocess/Pickliste-Rechnung-Versandlabel.plentyprocess[Fulfillment-Prozess]
+
 |
 
 |===
 //end::einleitung[]
 
 video::225368357[vimeo]
-
-Datei zu diesem Video:
-link:https://cdn02.plentymarkets.com/pmsbpnokwu6a/frontend/plentyprocess/Pickliste-Rechnung-Versandlabel.plentyprocess[Fulfillment-Prozess]
 
 // tag::transkript[]
 [.collapseBox]
