--- a/docs/en-gb/modules/videos/pages/backend.adoc
+++ b/docs/en-gb/modules/videos/pages/backend.adoc
@@ -9,7 +9,7 @@
 |Take your first steps toward setting up a point of sale system. Learn how to add a point of sale system in plentymarkets and configure its settings.
 |xref:videos:backend-location.adoc#video[Tell plentymarkets where your store is located (0:33)]
 
-<<videos/pos/setting-up-pos/backend-items#video, Pick the items that you'll sell (1:15)>>
+xref:videos:backend-items#video[Pick the items that you'll sell (1:15)]
 
 xref:videos:backend-payment.adoc#video[Decide how customers will pay for their purchases (2:26)]
 
