--- a/docs/en-gb/modules/videos/pages/creating-items-with-variations.adoc
+++ b/docs/en-gb/modules/videos/pages/creating-items-with-variations.adoc
@@ -6,9 +6,13 @@
 //tag::einleitung[]
 [cols="2, 1" grid=none]
 |===
-|You want to import items into plentymarkets?
+a|You want to import items into plentymarkets?
 And to complicate things even further, these items come in several different sizes and colours?
 This video teaches you how to use the import tool and get the job done!
+The video relies on two example files, which you can download and import into your own system.
+
+* link:https://cdn02.plentymarkets.com/pmsbpnokwu6a/frontend/ElasticSync_BestPractice/BestPractice.csv[Example CSV file^]
+* link:https://cdn02.plentymarkets.com/pmsbpnokwu6a/frontend/ElasticSync_BestPractice/Best-Practice-25-02-20.json.zip[Example import (JSON compressed as a ZIP file)^]
 
 *_Note_*: When this video was produced, the import tool was called ElasticSync.
 This name is now outdated and the menu has gone through a few visual changes.
