--- a/docs/en-gb/modules/videos/pages/example-single.adoc
+++ b/docs/en-gb/modules/videos/pages/example-single.adoc
@@ -6,7 +6,11 @@
 //tag::einleitung[]
 [cols="2, 1" grid=none]
 |===
-|See an example process in action! Watch our warehouse technician use this process to find orders, register their items and print the corresponding documents. Download this example process below the video.
+|See an example process in action! Watch our warehouse technician use this process to find orders, register their items and print the corresponding documents.
+
+Download this example process: +
+link:https://cdn02.plentymarkets.com/pmsbpnokwu6a/frontend/plentyprocess/Single-order_picking_2017_08_30_.plentyprocess[Single-Order-Picking^]
+
 |xref:videos:example-single-finding.adoc#video[Finding orders and scanning items (1:45)]
 
 xref:videos:example-single-removing.adoc#video[Removing orders from the process (2:16)]
@@ -19,10 +23,6 @@ xref:videos:example-single-printing.adoc#video[Printing documents (4:13)]
 //end::einleitung[]
 
 video::231662846[vimeo]
-
-File for this video:
-link:https://cdn02.plentymarkets.com/pmsbpnokwu6a/frontend/plentyprocess/Single-order_picking_2017_08_30_.plentyprocess[Single-Order-Picking^]
-
 
 // tag::transkript[]
 [.collapseBox]
