--- a/docs/en-gb/modules/videos/pages/reversal-document.adoc
+++ b/docs/en-gb/modules/videos/pages/reversal-document.adoc
@@ -7,9 +7,9 @@
 [cols="2, 1" grid=none]
 |===
 |In plentymarkets, orders are locked as soon as an invoice has been generated. That's why we advise sellers to wait and generate invoices when they're done editing an order.
-|<<videos/order-processing/processing-orders/reversal-document-locked-orders#video, Why are some orders locked? (0:22)>>
+|xref:videos:reversal-document-locked-orders#video[Why are some orders locked? (0:22)]
 
-<<videos/order-processing/processing-orders/reversal-document-invoices#video, When should you create invoices? (0:40)>>
+xref:videos:reversal-document-invoices#video[When should you create invoices? (0:40)]
 
 xref:videos:reversal-document-creation.adoc#video[Creating a reversal document (1:40)]
 
