--- a/docs/de-de/modules/videos/pages/fallbeispiel-multi.adoc
+++ b/docs/de-de/modules/videos/pages/fallbeispiel-multi.adoc
@@ -7,6 +7,9 @@
 [cols="2, 1" grid=none]
 |===
 |Was dieser Prozess alles kann? Mehrere Aufträge bearbeiten, Seriennummern erfassen, alle nötigen Dokumente für den Versand drucken und dir den Arbeitsalltag erleichtern!
+
+Datei zu diesem Video: +
+link:https://cdn02.plentymarkets.com/pmsbpnokwu6a/frontend/plentyprocess/Multi-Order-Picking-Prozess_2017.plentyprocess[Multi-Order-Picking-Process_2017^]
 |xref:videos:fallbeispiel-multi-picklistensuche.adoc#video[Picklistensuche und Artikelerfassung (1:24)]
 
 xref:videos:fallbeispiel-multi-bestandsfehler.adoc#video[Bestandsfehler angeben (2:00)]
@@ -19,9 +22,6 @@ xref:videos:fallbeispiel-multi-dokumente.adoc#video[Dokumente drucken (3:32)]
 //end::einleitung[]
 
 video::229827267[vimeo]
-
-Datei zu diesem Video:
-link:https://cdn02.plentymarkets.com/pmsbpnokwu6a/frontend/plentyprocess/Multi-Order-Picking-Prozess_2017.plentyprocess[Multi-Order-Picking-Process_2017^]
 
 // tag::transkript[]
 [.collapseBox]
