--- a/docs/de-de/modules/videos/pages/fallbeispiel-single.adoc
+++ b/docs/de-de/modules/videos/pages/fallbeispiel-single.adoc
@@ -7,6 +7,9 @@
 [cols="2, 1" grid=none]
 |===
 |Was dieser Prozess alles kann? Einzelne Aufträge bearbeiten, Seriennummern erfassen, alle nötigen Dokumente für den Versand drucken und dir den Arbeitsalltag erleichtern!
+
+Datei zu diesem Video: +
+link:https://cdn02.plentymarkets.com/pmsbpnokwu6a/frontend/plentyprocess/Single-order_picking_2017_08_30_.plentyprocess[Single-Order-Picking^]
 |xref:videos:fallbeispiel-single-auftragssuche.adoc#video[Auftragssuche und Artikelerfassung (1:27)]
 
 xref:videos:fallbeispiel-single-bestandsfehler.adoc#video[Bestandsfehler angeben (1:59)]
@@ -19,10 +22,6 @@ xref:videos:fallbeispiel-single-dokumente.adoc#video[Dokumente drucken (3:32)]
 //end::einleitung[]
 
 video::231547940[vimeo]
-
-Datei zu diesem Video:
-link:https://cdn02.plentymarkets.com/pmsbpnokwu6a/frontend/plentyprocess/Single-order_picking_2017_08_30_.plentyprocess[Single-Order-Picking^]
-
 
 // tag::transkript[]
 [.collapseBox]
