--- a/docs/en-gb/modules/videos/pages/automatic-returns.adoc
+++ b/docs/en-gb/modules/videos/pages/automatic-returns.adoc
@@ -7,6 +7,9 @@
 [cols="2, 1" grid=none]
 |===
 |Learn how to automatically create returns with the help of a plentymarkets process. This video teaches you how to use the example process below and customise its settings as needed.
+
+File for this video: +
+link:https://cdn02.plentymarkets.com/pmsbpnokwu6a/frontend/plentyprocess/Automatic-Returns_2017_11_17_08_.plentyprocess[Automatic-Returns]
 |xref:videos:automatic-returns-search-order.adoc#video[Searching for an order (0:34)]
 
 xref:videos:automatic-returns-scanning-items.adoc#video[Scanning the returned item (1:38)]
@@ -19,9 +22,6 @@ xref:videos:automatic-returns-default-values.adoc#video[Customising default valu
 
 
 video::243256565[vimeo]
-
-File for this video:
-link:https://cdn02.plentymarkets.com/pmsbpnokwu6a/frontend/plentyprocess/Automatic-Returns_2017_11_17_08_.plentyprocess[Automatic-Returns]
 
 // tag::transcript[]
 [.collapseBox]
