--- a/docs/en-gb/modules/videos/pages/export.adoc
+++ b/docs/en-gb/modules/videos/pages/export.adoc
@@ -11,7 +11,7 @@
 
 xref:videos:export-sku.adoc#video[Decide which information you want as the SKU (1:37)]
 
-<<videos/amazon/items/export-transmit-items#video, Transmit items if you're new to Amazon (2:35)>>
+xref:videos:export-transmit-items#video[Transmit items if you're new to Amazon (2:35)]
 
 xref:videos:export-update-prices-stock.adoc#video[Update prices and stock if you already sell on Amazon (4:24)]
 
