--- a/docs/en-gb/modules/videos/pages/partial-deliveries.adoc
+++ b/docs/en-gb/modules/videos/pages/partial-deliveries.adoc
@@ -7,7 +7,7 @@
 [cols="2, 1" grid=none]
 |===
 |Learn how to split an order into smaller parts and see which settings you'll need to configure in your system. See how to automate the whole process with event procedures.
-|<<videos/order-processing/processing-orders/partial-deliveries-delivery-orders#video, What are delivery orders? (0:56)>>
+|xref:videos:partial-deliveries-delivery-orders#video[What are delivery orders? (0:56)]
 
 xref:videos:partial-deliveries-settings.adoc#video[Configuring the basic settings (1:58)]
 
