--- a/docs/en-gb/modules/videos/pages/personalisation.adoc
+++ b/docs/en-gb/modules/videos/pages/personalisation.adoc
@@ -16,7 +16,7 @@ Make plentymarkets yours! Save your company information, create user accounts fo
 == Sending and receiving emails
 
 * xref:videos:mailboxorg.adoc#[Creating mailbox.org email accounts]
-* xref:videos:link-email-acount.adoc#[Linking your email account with plentymarkets]
+* xref:videos:link-email-account.adoc#[Linking your email account with plentymarkets]
 * xref:videos:email-templates.adoc#[Creating email templates]
 * xref:videos:template-variables-if-queries.adoc#[Template variables and if queries for emails]
 * xref:videos:automatic-despatch.adoc#[Automatically sending email templates]
