add screenshot and item search fields

--- a/docs/de-de/modules/warenwirtschaft/pages/artikel-und-lagerorte.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/artikel-und-lagerorte.adoc
@@ -41,7 +41,16 @@ Einstellungen zur Artikelsuche vornehmen:
 |Wähle aus, wie viele Suchergebnisse du auf einmal sehen möchtest.
 
 | *Artikelsuchfelder*
-|Verwende die Umschaltflächen, um festzulegen, welche Kriterien zur Suche nach Artikeln genutzt werden sollen. +
+a|Verwende die Umschaltflächen, um festzulegen, welche Kriterien zur Suche nach Artikeln genutzt werden sollen. Die folgenden Suchfelder sind für die Artikelsuche verfügbar: +
+
+* Artikel-ID
+* Variantennummer
+* Varianten-ID
+* Lieferanten-Artikel-Nr.
+* Name
+* Barcode
+* Tags
+
 *Aktiviert* (icon:toggle-on[role="green"]) = Es wird möglich sein, Artikel anhand dieses Kriteriums zu suchen. +
 *_Tipp:_* Tippe und halte (icon:drag_handle[set=material]) für jedes aktivierte Suchkriterium, um die Reihenfolge der angezeigten Suchfelder anzupassen.
 
