--- a/docs/de-de/modules/warenwirtschaft/pages/installation-und-ersteinrichtung.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/installation-und-ersteinrichtung.adoc
@@ -173,11 +173,9 @@ Allgemeine Einstellungen vornehmen:
 
 Brauchst du Hilfe oder suchst du Informationen über die aktuell auf deinem Gerät installierte Version von plentyWarehouse? Tippe auf das Menüsymbol (icon:bars[role="darkGrey"]) und anschließend auf *Über*, um die Informationen einzusenen.
 
+image::warenwirtschaft:about-screen_de.png[width=350]
+
 Tippe auf die entsprechenden Links, um zum Handbuch zu gelangen, Support im Forum zu erhalten oder auf rechtliche Angaben zuzugreifen.
-
-//TODO: Screenshot hinzufügen
-
-
 
 [#600]
 == Aus plentyWarehouse abmelden
