--- a/docs/en-gb/modules/stock-management/pages/items-and-storage-locations.adoc
+++ b/docs/en-gb/modules/stock-management/pages/items-and-storage-locations.adoc
@@ -7,7 +7,7 @@ include::partial$note-requirements.adoc[]
 include::partial$note-open-beta.adoc[]
 
 plentyWarehouse makes it easy for you to keep an eye on the items, stock and storage locations of your plentymarkets system at any time.
-The *<<#100, Item search>>* and *<<#400, Inspect storage location>>* functions are available for this purpose. This manual page offers you information on their scope and on how to use them.
+The *<<#100, Item search* and *<<#400, Inspect storage location>>* functions are available for this purpose. This manual page offers you information on their scope and on how to use them.
 
 [#100]
 == Item search
@@ -41,7 +41,16 @@ Carrying out settings for the item search:
 |Select the number of search results you want to see at once.
 
 | *Item search fields*
-|Use the toggle buttons to determine which criteria can be used for the item search. +
+a|Use the toggle buttons to determine which criteria can be used for the item search. The following search fields are available for the item search: +
+
+* Item ID
+* Variation number
+* Variation ID
+* Supplier item No.
+* Name
+* Barcode
+* Tags
+
 *Activated* (icon:toggle-on[role="green"]) = You will be able to use this criterion when searching for items. +
 *_Tip:_* Tap on (icon:drag_handle[set=material]) for each activated search criterion and drag it to the desired position to determine the order of the search fields.
 
@@ -50,7 +59,6 @@ Carrying out settings for the item search:
 
 | *Show net stock*
 |Activate this option to display the respective xref:glossary:glossary.adoc#net-stock[net stock] when opening an item from the search results.
-
 |====
 
 [#300]
@@ -92,7 +100,7 @@ Item information::
 [IMPORTANT]
 .Activate visibility for properties in plentyWarehouse
 ======
-Variation properties are only displayed in plentyWarehouse if you activate the visibility *Display in plentyWarehouse* under *Setup » Settings » Properties » Configuration » [Select property]* in the plentymarkets back end.
+Variation properties are only displayed in plentyWarehouse if you activate the visibility*Display in plentyWarehouse* under *Setup » Settings » Properties » Configuration » [Select property]* in the plentymarkets back end.
 ======
 +
 --
@@ -102,7 +110,7 @@ Stock::
 --
 * Name of the storage location at which the variation is currently stored
 * Warehouse in which the variation is currently stored
-* Quantity (<<stock-management/managing-stocks#100, here: physical stock) in which the variation is currently available
+* Quantity (xref:stock-management:managing-stocks.adoc#100[here: physical stock]) in which the variation is currently available
 --
 ====
 
