--- a/docs/de-de/modules/warenwirtschaft/pages/installation-und-ersteinrichtung.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/installation-und-ersteinrichtung.adoc
@@ -171,7 +171,7 @@ Allgemeine Einstellungen vornehmen:
 [#550]
 == App-Informationen einsehen
 
-Brauchst du Hilfe oder suchst du Informationen über die aktuell auf deinem Gerät installierte Version von plentyWarehouse? Tippe auf das Menüsymbol (icon:bars[role="darkGrey"]) und anschließend auf *Über*, um die Informationen einzusenen.
+Brauchst du Hilfe oder suchst du Informationen über die aktuell auf deinem Gerät installierte Version von plentyWarehouse? Tippe auf das Menüsymbol (icon:bars[role="darkGrey"]) und anschließend auf *Über*, um die Informationen einzusehen.
 
 image::warenwirtschaft:about-screen_de.png[width=350]
 
