--- a/docs/en-gb/modules/stock-management/pages/items-and-storage-locations.adoc
+++ b/docs/en-gb/modules/stock-management/pages/items-and-storage-locations.adoc
@@ -7,7 +7,7 @@ include::partial$note-requirements.adoc[]
 include::partial$note-open-beta.adoc[]
 
 plentyWarehouse makes it easy for you to keep an eye on the items, stock and storage locations of your plentymarkets system at any time.
-The *<<#100, Item search* and *<<#400, Inspect storage location>>* functions are available for this purpose. This manual page offers you information on their scope and on how to use them.
+The <<#100, *Item search*>> and <<#400, *Inspect storage location*>> functions are available for this purpose. This manual page offers you information on their scope and on how to use them.
 
 [#100]
 == Item search
@@ -46,7 +46,7 @@ a|Use the toggle buttons to determine which criteria can be used for the item se
 * Item ID
 * Variation number
 * Variation ID
-* Supplier item No.
+* Supplier item ID
 * Name
 * Barcode
 * Tags
