--- a/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
@@ -4,7 +4,15 @@
 :author: team-order-core
 
 == Einleitung
-// TODO: Text ergänzen
+//  TODO: Text ergänzen und anpassen
+Dieses Kapitel beschreibt die neue Aufträge-UI, die im Monat 2022 in einer offenen Betaphase veröffentlicht wurde.
+
+* UI steht für [.underline]##U##ser [.underline]##I##nterface (auf Deutsch: Benutzeroberfläche).
+Mit der Formulierung "neue Aufträge-UI" meinen wir also, dass es in plentymarkets jetzt ein neues Menü zur Verwaltung und Abwicklung von Aufträgen gibt.
+* "Offene Beta" bedeutet, dass du die neue Order-UI sehen und ausprobieren kannst.
+Die neue UI hat allerdings noch nicht den vollen Funktionsumfang.
+
+
 
 == Auftragsübersicht
 
@@ -22,6 +30,41 @@ Auftragspositionen
 außerdem wird dir erklärt wie du
 // TODO: Filter und Operatoren
 ////
+
+== Menüaufbau
+
+Das Menü *Aufträge » Aufträge-UI* ist wie folgt aufgebaut:
+
+image::auftraege:menue-uebersicht.png[]
+// TODO: passenden Screenshot erstellen und Ablauf prüfen
+
+* *Navigation*: Bereich links
+Hier navigierst du durch die einzelnen Bereiche des Menüs.
+Der aktuell ausgewählte Bereich (blaue Schrift) wird im Hauptfenster rechts angezeigt.
+Falls du mehrere Aufträge oder Varianten gleichzeitig offen hast, werden diese untereinander angezeigt.
+Klicke auf icon:bars[role="darkGrey"], um die Navigationsleiste ein- und auszublenden.
+
+////
+* *Toolbar*:
+Hier führst du relevante Aktionen durch. Zum Beispiel:
+** xref:artikel:suchen.adoc#100[nach Aufträgen und Varianten suchen].
+** xref:artikel:detailansicht.adoc#1000[deine Änderungen an Aufträgen oder Varianten speichern].
+////
+
+* *Hauptfenster*:
+Hier wird der aktuell geöffnete Bereich angezeigt.
+** *Übersicht*:
+Wenn du eine Suche ausführst, siehst du die xref:artikel:suchen.adoc#500[Ergebnisse in einer Übersicht].
+Die Übersicht liefert Informationen zu den gefundenen Aufträgen auf einen Blick.
+Zum Beispiel siehst du ein Bild des Auftrags, ob der ....
+//TODO: Link für Aufträge
+
+** *Detailansicht*:
+Wenn du einen Auftrag öffnest, werden seine Details im Hauptfenster auf der rechten Seite angezeigt.
+Was aber, wenn das Hauptfenster leer ist?
+Oder was, wenn du mit der Anordnung der Auftragsdetails nicht zufrieden bist?
+Du kannst eine xref:artikel:detailansicht.adoc#200[neue Detailansicht erstellen] und sie an deine Bedürfnisse anpassen.
+//TODO: Link für Aufträge
 
 Die Tabellenspalten sind für beide Level konfigurierbar. Beim ersten Öffnen wird dir jeweils die Standardansicht der Tabelle angezeigt. Durch Klicken auf Zahnrad (icon…) öffnet sich das Fenster mit der Auswahl Order table und Order item table. Darüber kannst über *Spalten konfigurieren* (icon:settings[set=material]) wählen, welche Spalten dir in welcher Reihenfolge angezeigt werden. Wähle
 
@@ -500,7 +543,8 @@ Gespeicherte Filter anwenden:
 → Die Suche wird ausgeführt und die verwendeten Filtereinstellungen werden oben als Chips dargestellt.
 
 
-[#aktuellen-filter-speichern] - kopiert aus Versandcenter
+[#aktuellen-filter-speichern]
+// TODO: kopiert aus Versandcenter, anpassen
 
 === Aktuellen Filter speichern
 …
@@ -518,9 +562,9 @@ Aktuellen Filter speichern:
 // TODO: prüfen [#order-overview-single-actions]
 == Aufträge in der Übersicht bearbeiten
 
-In der Auftragsübersicht stehen dir für Aufträge verschiedene Bearbeitungsfunktionen zur Verfügung. Diese ermöglichen eine schnelle Bearbeitung, ohne in die Detailansicht eines Auftrags gehen zu müssen. Du kannst entweder <<LINK#, einzelne Aufträge>> bearbeiten oder über die <<LINK#, Gruppenfunktion>> mehrere Aufträge gleichzeitig bearbeiten ??. +
+In der Auftragsübersicht stehen dir für Aufträge verschiedene Bearbeitungsfunktionen zur Verfügung. Diese ermöglichen eine schnelle Bearbeitung, ohne in die Detailansicht eines Auftrags gehen zu müssen. Du kannst entweder <<LINK#, einzelne Aufträge>> bearbeiten oder über die <<LINK#, Gruppenfunktion>> mehrere Aufträge gleichzeitig bearbeiten. +
 In der Detailansicht eines Auftrags stehen dir umfassendere Funktionen zur Verfügung. Zudem kannst du die Detailansicht eines Auftrags individuell gestalten. Mit MyView kannst du bestimmen, welche Informationen dir in welcher Struktur angezeigt werden. Mit diesem besseren Überblick wird deine Auftragsbearbeitung auch effizienter.
-
+// TODO: Ablauf prüfen
 // TODO: prüfen [#order-overview-single-functions]
 
 === Einzelne Bearbeitungsfunktionen
