--- a/docs/de-de/modules/automatisierung/pages/arbeitsschritte.adoc
+++ b/docs/de-de/modules/automatisierung/pages/arbeitsschritte.adoc
@@ -78,10 +78,7 @@ Bei mehreren Arbeitsschritten kann hier die Reihenfolge geändert werden. Standa
 [#auftragsabwicklung-filter]
 ==== Filter
 
-Mit 
-
-| *Tags*
-n grenzt du genau ein, welche Aufträge mit dem Arbeitsschritt *Auftragsabwicklung* bearbeitet werden.
+Mit Filtern bestimmst du genau, welche Aufträge mit dem Arbeitsschritt *Auftragsabwicklung* bearbeitet werden.
 
 <<table-work-step-filter>> erläutert die für diesen Arbeitsschritt verfügbaren Filter.
 
