--- a/docs/de-de/modules/auftraege/pages/auftragsdokumente.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftragsdokumente.adoc
@@ -387,7 +387,7 @@ Dieser Hinweis wird bei einer Lieferung außerhalb der EU ausgegeben. Die Formul
 
 | [#intable-tax-note-three]*Steuerrechtlicher Hinweis 3*
 |Wie *Steuerrechtlicher Hinweis 1*. +
-Dieser Hinweis wird bei einer B2B-Lieferung mit <<auftraege/buchhaltung#510, Reverse-Charge-Verfahren>> ausgegeben. Die Formulierung kann hier z.B. lauten *Reverse-Charge-Verfahren gem. Artikel 194 der MwStSystRL.*
+Dieser Hinweis wird bei einer B2B-Lieferung mit xref:auftraege:buchhaltung.adoc#510[Reverse-Charge-Verfahren] ausgegeben. Die Formulierung kann hier z.B. lauten *Reverse-Charge-Verfahren gem. Artikel 194 der MwStSystRL.*
 
 | *Hinweis Differenzbesteuerung*
 |Wie Option *Steuerrechtlicher Hinweis 1*.  +
@@ -403,7 +403,7 @@ Bei der Einstellung Differenzbesteuerung handelt es sich um eine ältere Sonderi
 Dies ist ein Hinweis für deutsche Behörden, dass es sich um eine steuerfreie Ausfuhrlieferung handelt. Beachte, dass für Lieferungen von der EU nach Großbritannien ggf. weitere Angaben auf der Rechnung enthalten sein müssen, z.B. über den Nettowarenwert der Lieferung oder deine britische Umsatzsteuer. Wir empfehlen, mit deinem Steuerbüro zu klären, was du für Lieferungen nach Großbritannien benötigst.
 
 | *Zahlungshinweis der Kundenklasse*
-|Einstellen, ob der Zahlungshinweis der Kundenklasse ausgegeben werden soll. Weitere Informationen zum Zahlungshinweis der Kundenklasse findest du auf der Handbuchseite <<crm/kontakte-verwalten#15, Kontakte>>.
+|Einstellen, ob der Zahlungshinweis der Kundenklasse ausgegeben werden soll. Weitere Informationen zum Zahlungshinweis der Kundenklasse findest du auf der Handbuchseite xref:crm:kontakte-verwalten.adoc#15[Kontakte].
 
 | *Standard-Zahlungshinweis (Lastschrift)*
 |Für Aufträge mit der Zahlungsart Lastschrift wird auf den Dokumenten Rechnung und Lieferschein standardmäßig der Hinweis *Der Rechnungsbetrag wird dankend von Ihrem Konto abgebucht* angezeigt. Aktiviere die Option *Hinweis ausblenden*, wenn dieser Hinweis auf den Dokumenten nicht angezeigt werden soll.
