--- a/docs/en-gb/modules/orders/pages/order-documents.adoc
+++ b/docs/en-gb/modules/orders/pages/order-documents.adoc
@@ -404,7 +404,7 @@ The margin scheme setting in plentymarkets is an older customized implementation
 This is a note for German authorities notifying them that the export delivery is tax-free. Take into account that for deliveries from the EU to the UK, additional information might be needed on the invoice. For example information about the net value of the delivery or your UK VAT. We recommend that you check with your tax office what is needed for deliveries to the UK.
 
 | *Payment instruction of the customer class*
-|Select whether the payment instruction of the customer class is displayed on the document. For further information on the payment instruction of the customer class, refer to the <<crm/managing-contacts#15, Managing contacts>> page of the manual.
+|Select whether the payment instruction of the customer class is displayed on the document. For further information on the payment instruction of the customer class, refer to the xref:crm:managing-contacts.adoc#15[Managing contacts] page of the manual.
 
 | *Standard payment note (debit)*
 |For orders with the payment method direct debit, the note *The invoice amount will be gratefully debited from your account* is displayed on the invoice and delivery note. Activate the option *Hide note* if the note should not be displayed on the documents.
