--- a/docs/de-de/modules/auftraege/pages/auftragsdokumente.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftragsdokumente.adoc
@@ -383,11 +383,11 @@ Dieser Hinweis wird bei einer Lieferung in die EU bei vorliegender USt.-IdNr. au
 
 | *Steuerrechtlicher Hinweis 2*
 |Wie *Steuerrechtlicher Hinweis 1*. +
-Dieser Hinweis wird bei einer Lieferung außerhalb der EU ausgegeben. Die Formulierung nach deutschem Recht kann hier beispielsweise lauten: *Ausfuhrlieferung gemäß §4 Nr. 1a in Verbindung mit §6 UStG**.
+Dieser Hinweis wird bei einer Lieferung außerhalb der EU ausgegeben. Die Formulierung nach deutschem Recht kann hier z.B. lauten *Ausfuhrlieferung gemäß §4 Nr. 1a in Verbindung mit §6 UStG**.
 
 | [#intable-tax-note-three]*Steuerrechtlicher Hinweis 3*
 |Wie *Steuerrechtlicher Hinweis 1*. +
-Dieser Hinweis wird bei einer B2B-Lieferung mit xref:auftraege:buchhaltung.adoc#510[Reverse-Charge-Verfahren] ausgegeben. Die Formulierung kann hier beispielsweise lauten *Reverse-Charge-Verfahren gem. Artikel 194 der MwStSystRL.*
+Dieser Hinweis wird bei einer B2B-Lieferung mit xref:auftraege:buchhaltung.adoc#510[Reverse-Charge-Verfahren] ausgegeben. Die Formulierung kann hier z.B. lauten *Reverse-Charge-Verfahren gem. Artikel 194 der MwStSystRL.*
 
 | *Hinweis Differenzbesteuerung*
 |Wie Option *Steuerrechtlicher Hinweis 1*.  +
@@ -397,6 +397,10 @@ Bei der Einstellung Differenzbesteuerung handelt es sich um eine ältere Sonderi
 
 | *Hinweis Landesmehrwertsteuer*
 |Einstellen, ob ein Hinweis zur Landesmehrwertsteuer ausgegeben werden soll. Dieser Hinweis wird ausgegeben, wenn der Standardumsatzsteuersatz bei Lieferungen ins Ausland benutzt wird.
+
+| [#intable-delivery-eu-uk]*Hinweis für Lieferungen nach Großbritannien*
+|Dieser Hinweis wird ausgegeben, wenn von der EU nach Großbritannien geliefert wird, der Auftrag brutto ist und keine Steuernummer an den Adressen hinterlegt ist (B2C-Lieferung). Die Formulierung kann hier z.B. lauten *Es handelt sich im deutschen Steuerrecht um eine steuerfreie Ausfuhrlieferung nach §§ 4 Nr. 1a i.V.m. 6 UStG.* +
+Dies ist ein Hinweis für deutsche Behörden, dass es sich um eine steuerfreie Ausfuhrlieferung handelt. Beachte, dass für Lieferungen von der EU nach Großbritannien ggf. weitere Angaben auf der Rechnung enthalten sein müssen, z.B. über den Nettowarenwert der Lieferung oder deine britische Umsatzsteuer. Wir empfehlen, mit deinem Steuerbüro zu klären, was du für Lieferungen nach Großbritannien benötigst.
 
 | *Zahlungshinweis der Kundenklasse*
 |Einstellen, ob der Zahlungshinweis der Kundenklasse ausgegeben werden soll. Weitere Informationen zum Zahlungshinweis der Kundenklasse findest du auf der Handbuchseite xref:crm:kontakte-verwalten.adoc#15[Kontakte].
@@ -408,6 +412,7 @@ Bei der Einstellung Differenzbesteuerung handelt es sich um eine ältere Sonderi
 |In der Dropdown-Liste *Zahlungsart* eine Zahlungsart wählen. Den *Zahlungshinweis* für diese Zahlungsart in das Textfeld eintragen. +
 Der Zahlungshinweis ist nicht fest mit der Zahlungsart verknüpft. Wird die Zahlungsart über die Dropdown-Liste geändert, bleibt der im Textfeld eingetragene Hinweis bestehen. Er wird auf die neu gewählte Zahlungsart angewendet.
 |====
+
 
 [#1400]
 == Dokumenteneinstellungen übertragen
