--- a/docs/de-de/modules/crm/pages/schnellsuche.adoc
+++ b/docs/de-de/modules/crm/pages/schnellsuche.adoc
@@ -178,7 +178,12 @@ Weitere Informationen findest du im Kapitel <<#gastzugang-umwandeln, Gastzugang 
 | *Daten neu laden*
 |Mit einem Klick auf icon:undo[] werden die Daten in diesem Datensatz aktualisiert.
 
-// hier noch die zwei Buttons aus der UI ergänzen.
+| *Pause* / *Start*
+|Mit einem Klick auf icon:pause_circle[set=material] hältst du den Timer an. +
+Mit einem Klick auf icon:play_circle[set=material] wird der Timer wieder gestartet.
+
+| *Zurücksetzen*
+Mit einem Klick auf icon:reset[set=plenty] setzt du den Timer zurück auf null.
 
 |====
 
