--- a/docs/de-de/modules/crm/pages/schnellsuche.adoc
+++ b/docs/de-de/modules/crm/pages/schnellsuche.adoc
@@ -130,79 +130,60 @@ Wenn du einen Datensatz in der Schnellsuche öffnest, siehst du in der ersten Ze
 
 [[table-settings-quick-search]]
 .Einstellungen in der Schnellsuche
-[cols="2,1,6"]
+[cols="2,6"]
 |====
-|Einstellung |Symbol |Erläuterung
+|Einstellung |Erläuterung
 
-| *Kontakt-ID*
-|
+| *KONTAKT-ID*
 |Öffnet den Kontaktdatensatz im Menü *CRM » Kontakte*. +
 *_Hinweis:_* Wenn es sich bei dem Datensatz um eine Gastbestellung handelt, ist dieses Feld ausgegraut.
 
-| *Aufträge*
-|
+| *AUFTRÄGE*
 |Öffnet das Menü *Aufträge » Aufträge bearbeiten*. Als Filter ist die ID des Kontakts automatisch gewählt. +
-*_Hinweis:_* Wenn es sich bei dem Datensatz um eine Gastbestellung handelt, ist dieses Feld ausgegraut.
+Mit einem Klick auf icon:add[set=material] *Neuer Auftrag* rechts neben *AUFTRÄGE* wird ein neuer Auftrag im Menü *Aufträge » Aufträge bearbeiten* erstellt. +
+*_Hinweis:_* Wenn es sich bei dem Datensatz um eine Gastbestellung handelt, sind diese Felder ausgegraut. +
 
-| *Neuer Auftrag*
-|icon:plus-square[role="green"]
-|Erstellt einen neuen Auftrag im Menü *Aufträge » Aufträge bearbeiten*. +
-*_Hinweis:_* Wenn es sich bei dem Datensatz um eine Gastbestellung handelt, ist dieses Feld ausgegraut.
-
-| *Angebote*
-|
+| *ANGEBOTE*
 |Öffnet das Menü *Aufträge » Aufträge bearbeiten*. Als Filter ist die ID des Kontakts automatisch gewählt. +
-*_Hinweis:_* Wenn es sich bei dem Datensatz um eine Gastbestellung handelt, ist dieses Feld ausgegraut.
+Mit einem Klick auf icon:add[set=material] *Neues Angebot* rechts neben *ANGEBOTE* wird ein neues Angebot im Menü *Aufträge » Aufträge bearbeiten* erstellt. +
+*_Hinweis:_* Wenn es sich bei dem Datensatz um eine Gastbestellung handelt, sind diese Felder ausgegraut.
 
-| *Neues Angebot*
-|icon:plus-square[role="green"]
-|Erstellt ein neues Angebot im Menü *Aufträge » Aufträge bearbeiten*. +
-*_Hinweis:_* Wenn es sich bei dem Datensatz um eine Gastbestellung handelt, ist dieses Feld ausgegraut.
+| *MESSENGER*
+|Öffnet weiter unten den Bereich *Messenger*. +
+Mit einem Klick auf icon:add[set=material] *Neue Nachricht* rechts neben *MESSENGER* öffnet sich weiter unten das Bearbeitungsfenster zum Erstellen einer neuen Nachricht. +
+*_Hinweis:_* Wenn es sich bei dem Datensatz um eine Gastbestellung handelt, sind diese Felder ausgegraut.
 
-| *Messenger*
-|
-|Öffnet den Bereich *Messenger*. +
-*_Hinweis:_* Wenn es sich bei dem Datensatz um eine Gastbestellung handelt, ist dieses Feld ausgegraut.
-
-| *Neue Nachricht*
-|icon:plus-square[role="green"]
-|Erstellt eine neue Nachricht. +
-*_Hinweis:_* Wenn es sich bei dem Datensatz um eine Gastbestellung handelt, ist dieses Feld ausgegraut.
-
-| *Tickets*
-|
+| *TICKETS*
 |Öffnet das Menü *CRM » Ticketsystem*. Als Filter ist die ID des Kontakts automatisch gewählt. +
-*_Hinweis:_* Wenn es sich bei dem Datensatz um eine Gastbestellung handelt, ist dieses Feld ausgegraut.
-
-| *Neues Ticket*
-|icon:plus-square[role="green"]
-|Erstellt ein neues Ticket im Menü *CRM » Ticketsystem*. +
-*_Hinweis:_* Wenn es sich bei dem Datensatz um eine Gastbestellung handelt, ist dieses Feld ausgegraut.
+Mit einem Klick auf icon:add[set=material] *Neues Ticket* rechts neben *TICKETS* öffnet sich das Bearbeitungsfenster zum Erstellen eines neuen Tickets im Menü *CRM » Ticketsystem*. + 
+*_Hinweis:_* Wenn es sich bei dem Datensatz um eine Gastbestellung handelt, sind diese Felder ausgegraut.
 
 | *Alle Daten dieses Kontakts herunterladen*
-|icon:download[role="purple"]
-|Lädt alle gespeicherten Daten zu diesem Datensatz herunter. +
+|Mit einem Klick auf icon:file_download[set=material] werden alle gespeicherten Daten zu diesem Datensatz heruntergeladen. +
 Weitere Informationen findest du im Kapitel <<#alle-daten-herunterladen, Alle Daten zu einem Kontakt oder einer Gastbestellung herunterladen>>.
 
 | *Newsletter Opt-In E-Mail senden*
-|icon:envelope-o[role="purple"]
-|Versendet die E-Mail zum Newsletter-Opt-In bzw. die Bestätigung zum Newsletter-Opt-In. +
+|Mit einem Klick auf icon:outgoing_mail[set=material] wird eine E-Mail zum Newsletter-Opt-In bzw. die Bestätigung zum Newsletter-Opt-In versendet. +
 *_Hinweis:_* Wenn die Person noch nicht für den Newsletter angemeldet ist, erhält sie die automatische E-Mail für Newsletter-Opt-In. Wenn die Person bereits für den Newsletter angemeldet ist, aber noch nicht bestätigt hat, erhält sie die Bestätigung zum Newsletter-Opt-In.
 
 | *Datensatz anonymisieren*
-|icon:user-secret[]
-|Anonymisiert den Datensatz. Das Anonymisieren der Daten ist nur bei einem Kontaktdatensatz möglich, nicht bei einer Gastbestellung. +
+|Mit einem Klick auf icon:user-secret[] wird der Datensatz anonymisiert. Das Anonymisieren der Daten ist nur bei einem Kontaktdatensatz möglich, _nicht_ bei einer Gastbestellung. +
 Weitere Informationen findest du im Kapitel <<#datensatz-anonymisieren, Datensatz anonymisieren>>.
 
 | *Gast in Kontakt umwandeln*
-|icon:exchange[role="yellow"]
-|Wandelt die Adressdaten aus einer Gastbestellung in einen regulären Kontaktdatensatz um. Im neu erstellten Kontaktdatensatz wird dann im Bereich *Historie* der Eintrag *Umgewandelt von* sowie der Name der Person, die den Datensatz umgewandelt hat, hinzugefügt. +
+|Mit einem Klick auf icon:swap_horiz[set=material] werden die Adressdaten aus einer Gastbestellung in einen regulären Kontaktdatensatz umgewandelt. Im neu erstellten Kontaktdatensatz wird dann im Bereich *Historie* der Eintrag *Umgewandelt von* sowie der Name der Person, die den Datensatz umgewandelt hat, hinzugefügt. +
 Weitere Informationen findest du im Kapitel <<#gastzugang-umwandeln, Gastzugang in Kontaktdatensatz umwandeln>>. +
 *_Hinweis:_* Wenn es sich bereits um einen Kontakt handelt, ist das Feld ausgegraut und über der Schaltfläche erscheint der Hinweis *Dieser Kontakt ist kein Gast.*
 
 | *Daten neu laden*
-|icon:undo[]
-|Aktualisiert die Daten in diesem Datensatz.
+|Mit einem Klick auf icon:undo[] werden die Daten in diesem Datensatz aktualisiert.
+
+| *Pause* / *Start*
+|Mit einem Klick auf icon:pause_circle[set=material] hältst du den Timer an. +
+Mit einem Klick auf icon:play_circle[set=material] wird der Timer wieder gestartet.
+
+| *Zurücksetzen*
+Mit einem Klick auf icon:reset[set=plenty] setzt du den Timer zurück auf null.
 
 |====
 
@@ -222,7 +203,7 @@ Gastzugang in Kontaktdatensatz umwandeln:
 → Die Datensätze, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Datensatzes. +
 → Der Datensatz wird geöffnet.
-. Klicke in der Kopfzeile auf *Gast in Kontakt umwandeln* (icon:exchange[role="yellow"]). +
+. Klicke in der Kopfzeile auf *Gast in Kontakt umwandeln* (icon:swap_horiz[set=material]). +
 → Ein Fenster mit einer Sicherheitsabfrage wird angezeigt. +
 . Wenn du DGSVO-konform gearbeitet hast, klicke auf *Umwandeln*. +
 → Der Datensatz wird in einen Kontaktdatensatz umgewandelt und erhält automatisch die nächste freie Kontakt-ID. Im Bereich *Historie* des Kontaktdatensatzes wird der Eintrag *Umgewandelt von* sowie der Name der Person, die den Datensatz umgewandelt hat, hinzugefügt.
@@ -249,7 +230,7 @@ Alle Daten zu einem Kontakt oder einer Gastbestellung herunterladen:
 → Die Datensätze, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Datensatzes. +
 → Die Übersicht mit den Bereichen *Rechnungsadresse*, *Stammdaten* und *Info* wird geöffnet.
-. Klicke in der oberen Zeile auf *Alle Daten dieses Kontakts herunterladen* (icon:download[role="purple"]). +
+. Klicke in der oberen Zeile auf *Alle Daten dieses Kontakts herunterladen* (icon:file_download[set=material]). +
 → Ein Dialogfenster wird angezeigt. Lege den Speicherort für die ZIP-Datei auf deinem Computer fest.
 
 Weitere Informationen zu der Download-Datei findest du in diesem link:https://forum.plentymarkets.com/t/dsgvo-button-fuer-den-datenexport-zu-einem-kunden-integriert/486915[Changelog^]-Beitrag im plentymarkets Forum.
