update material icons

--- a/docs/de-de/modules/crm/pages/schnellsuche.adoc
+++ b/docs/de-de/modules/crm/pages/schnellsuche.adoc
@@ -43,15 +43,13 @@ Datensätze über die Schnellsuche finden:
 . Klicke in die Zeile *Adressen*, um weitere Adressen anzuzeigen. +
 → Mit einem Klick in die Zeile der Adresse gelangst du direkt in die Adressübersicht und kannst dort Änderungen vornehmen.
 . Klicke in die Zeile *Messenger*, um die Nachrichten anzuzeigen. +
-→ Klicke auf *Neue Nachricht* (icon:plus-square[role="green"]). Die Stoppuhr oben rechts startet automatisch, sobald die Nachricht geöffnet wird. Klicke auf *Kostenpflichtig* icon:pay_cash[set=plenty] icon:toggle-off[role="red"], um die Zeit abzurechnen. +
+→ Klicke auf *Neue Nachricht* (icon:add[set=material]). Die Stoppuhr oben rechts startet automatisch, sobald die Nachricht geöffnet wird. Klicke neben dem Feld *Minuten* auf *Kostenpflichtig* (icon:toggle_off[set=material] icon:pay_cash[set=plenty]), um die Zeit abzurechnen. +
 *_Hinweis:_* Weitere Informationen findest du auf der Handbuchseite xref:crm:messenger.adoc#[Messenger].
 . Klicke in die Zeile *Events*, um neue Events hinzuzufügen oder bestehende Events zu bearbeiten. +
-→ Klicke auf *Event hinzufügen* (icon:plus-square[role="green"]), um diese Zeit zu speichern. +
+→ Klicke auf *Event hinzufügen* (icon:add[set=material]), um diese Zeit zu speichern. +
 → *_Hinweis:_* Events sind nur für Kontaktdatensätze verfügbar, _nicht_ für Gastbestellungen.
 . Klicke in die Zeile *Tickets*, um die Tickets anzuzeigen. +
 → Mit einem Klick in die Zeile des Tickets gelangst du direkt in das Ticket im Menü *CRM » Ticketsystem*.
-
-// Screenshot einfügen
 
 [[table-filter-quick-search]]
 .Filter in der Schnellsuche
@@ -121,7 +119,7 @@ Wähle die Einstellung *Alle außer Deutschland*, um nur Kontakte aus allen Län
 |====
 
 [TIP]
-Sobald du im Menü *CRM » Schnellsuche* einen Datensatz öffnest, startet eine Stoppuhr automatisch oben rechts in der Ecke. Mit einem Klick auf *Pause* (icon:pause-circle-o[]) hältst du die Uhr an. Mit einem weiteren Klick auf *Start* (icon:play-circle[]) läuft die Zeit weiter. Klicke auf *Zurücksetzen* (icon:undo[role="orange"]), um die Zeit auf 0 zu setzen.
+Wenn du im Menü *CRM » Schnellsuche* einen Datensatz öffnest, kannst du mit einem Klick auf *Start* (icon:play_circle[set=material]) den Timer starten. Mit einem Klick auf *Pause* (icon:pause_circle[set=material]) hältst du den Timer an. Klicke auf *Zurücksetzen* ( icon:reset[set=plenty]), um die Zeit auf 0 zu setzen.
 
 [#weitere-einstellungen]
 == Weitere Einstellungsmöglichkeiten
@@ -179,11 +177,10 @@ Weitere Informationen findest du im Kapitel <<#gastzugang-umwandeln, Gastzugang 
 |Mit einem Klick auf icon:undo[] werden die Daten in diesem Datensatz aktualisiert.
 
 | *Pause* / *Start*
-|Mit einem Klick auf icon:pause_circle[set=material] hältst du den Timer an. +
-Mit einem Klick auf icon:play_circle[set=material] wird der Timer wieder gestartet.
+|Mit einem Klick auf icon:pause_circle[set=material] hältst du den Timer an. Mit einem Klick auf icon:play_circle[set=material] wird der Timer wieder gestartet.
 
 | *Zurücksetzen*
-Mit einem Klick auf icon:reset[set=plenty] setzt du den Timer zurück auf null.
+|Mit einem Klick auf icon:reset[set=plenty] setzt du den Timer zurück auf 0.
 
 |====
 
@@ -205,7 +202,7 @@ Gastzugang in Kontaktdatensatz umwandeln:
 → Der Datensatz wird geöffnet.
 . Klicke in der Kopfzeile auf *Gast in Kontakt umwandeln* (icon:swap_horiz[set=material]). +
 → Ein Fenster mit einer Sicherheitsabfrage wird angezeigt. +
-. Wenn du DGSVO-konform gearbeitet hast, klicke auf *Umwandeln*. +
+. Wenn du DSGVO-konform gearbeitet hast, klicke auf *Umwandeln*. +
 → Der Datensatz wird in einen Kontaktdatensatz umgewandelt und erhält automatisch die nächste freie Kontakt-ID. Im Bereich *Historie* des Kontaktdatensatzes wird der Eintrag *Umgewandelt von* sowie der Name der Person, die den Datensatz umgewandelt hat, hinzugefügt.
 
 [TIP]
