--- a/docs/en-gb/modules/crm/pages/quick-search.adoc
+++ b/docs/en-gb/modules/crm/pages/quick-search.adoc
@@ -65,7 +65,7 @@ Finding data records via the quick search:
 |Click on icon:undo[role="orange"] to reset the filter criteria set.
 
 | *ID*
-|Each contact automatically receives a consecutive and unique ID. It doesn't matter if the data record was saved manually or automatically. 2 contacts never have the same ID. The ID is always a real number. For example, 00521 or ABC8354 are therefore invalid. +
+|Each contact automatically receives a consecutive and unique ID. It doesn’t matter if the data record was saved manually or automatically. 2 contacts never have the same ID. The ID is always a real number. For example, 00521 or ABC8354 are therefore invalid. +
 *_Note:_* Click on the arrows (icon:sort[]) next to the ID in the overview to sort the contact data records found in ascending or descending order according to their ID.
 
 | *Name*
@@ -114,7 +114,7 @@ Select the setting *All except Germany* to only display contacts from all countr
 
 | *Client*
 |Select a client to only display contacts that correspond to this client. The client is saved within the contact data record. +
-*_Important:_* Back end users can only select those clients that they have a right to access. Go to *Setup » Settings » User » Accounts* and set the rights in the user account in the xref:business-decisions/user-accounts-access.adoc#90[Rights] tab.
+*_Important:_* Back end users can only select those clients that they have a right to access. Go to *Setup » Settings » User » Accounts* and set the rights in the user account in the xref:business-decisions:user-accounts-access.adoc#90[Rights] tab.
 
 |====
 
